Kubernetes/Deployment/monitoring/prometheus/prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      # Prometheus server
      - name: prometheus
        image: prom/prometheus:master
        args:
      #    - '-storage.local.engine=none'
          - -storage.local.retention=36h
          - -storage.local.path=/data
          - '-config.file=/etc/prometheus/prometheus.yml'
          - '-alertmanager.url=http://alertmanager:9093'
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - name: config-volume-prometheus
          mountPath: /etc/prometheus
        - name: localtime
          mountPath: /etc/localtime
        - name: prometheus-data
          mountPath: /data          
        resources:
          limits:
            cpu: 1200m
            memory: 1000Mi
          requests:
            cpu: 400m
            memory: 100Mi
      volumes:
      - name: config-volume-prometheus
        configMap:		
          name: prometheus
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data-pvc         

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
