Kubernetes/Deployment/monitoring/prometheus/promethues-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      # Prometheus server
      - name: prometheus
        image: prom/prometheus:v1.5.2
        args:
          - '-storage.local.retention=72h'
          - '-storage.local.path=/data'
          - '-storage.local.memory-chunks=500000'
          - '-config.file=/etc/prometheus/prometheus.yml'
          - '-alertmanager.url=http://alertmanager:9093'
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - name: config-volume-prometheus
          mountPath: /etc/prometheus
        - name: prometheus-data
          mountPath: /data
        resources:
          limits:
            cpu: 1200m
            memory: 1000Mi
          requests:
            cpu: 400m
            memory: 400Mi
      # Volumes and config maps
      volumes:
      - name: config-volume-prometheus
        configMap:
          name: prometheus
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - port: 9090
      name: prometheus
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
